[package]
name = "ssd-flash-id"
version = "0.2.0"
edition = "2024"
description = "Identify NAND flash chips on NVMe and SATA SSDs via vendor-specific commands"
license = "MIT"
repository = "https://github.com/pseudolabel/ssd-flash-id"
keywords = ["nvme", "sata", "ssd", "nand", "flash"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
